--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,50 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<!-- Camera access -->
-<key>NSCameraUsageDescription</key>
-<string>
-We need camera access to scan device QR codes and capture photos for IoT device setup and diagnostics.
-</string>
-
-<!-- Photo Library access -->
-<key>NSPhotoLibraryUsageDescription</key>
-<string>
-We need access to your photo library to select and upload images related to your IoT device.
-</string>
-
-<!-- Photo Library (Add only – optional but recommended) -->
-<key>NSPhotoLibraryAddUsageDescription</key>
-<string>
-We need permission to save images related to your IoT device if required.
-</string>
-
-<!-- Microphone access (for WebRTC video streaming) -->
-<key>NSMicrophoneUsageDescription</key>
-<string>
-We need microphone access to support live video streaming from your IoT camera device.
-</string>
-
-<!-- Location access (foreground) -->
-<key>NSLocationWhenInUseUsageDescription</key>
-<string>
-We need your location to show the device position while the app is in use.
-</string>
-<key>NSLocationAlwaysUsageDescription</key>
-<string>Location is required even when app is in background.</string>
-
-<!-- Location access (background) -->
-<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-<string>
-We need background location access to continuously track device location even when the app is not open.
-</string>
-
-<!-- Background modes -->
-<key>UIBackgroundModes</key>
-<array>
-    <string>location</string>
-    <string>audio</string>
-</array>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -68,6 +26,41 @@ We need background location access to continuously track device location even wh
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>
+We need camera access to scan device QR codes and capture photos for IoT device setup and diagnostics.
+</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>
+We need background location access to continuously track device location even when the app is not open.
+</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location is required even when app is in background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>
+We need your location to show the device position while the app is in use.
+</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>
+We need microphone access to support live video streaming from your IoT camera device.
+</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>
+We need permission to save images related to your IoT device if required.
+</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>
+We need access to your photo library to select and upload images related to your IoT device.
+</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>audio</string>
+		<string>processing</string>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -85,9 +78,5 @@ We need background location access to continuously track device location even wh
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
 </dict>
 </plist>
