--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,17 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.8
   flutter_webrtc: ^1.2.1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
+
+  bloc_test: ^10.0.0
+  mockito: ^5.4.4
+  build_runner: ^2.4.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
